k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xuyang-api-service
  namespace: xgao-dev
spec:
  selector:
    app: xuyang-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
