k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xuyang-api-ingress
  namespace: xgao-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: xgao-dev-xuyang-api-stripprefix@kubernetescrd
spec:
  rules:
    - host: api-dev.xuyang.dev
      http:
        paths:
          - path: /xuyang-api
            pathType: Prefix
            backend:
              service:
                name: xuyang-api
                port:
                  number: 8080
